vix/tests/checker-corpus/reject/too-many-arguments.vix
fn id(x: Int) -> Int {
    x
}

fn main() -> Int {
    id(1, 2)
}
